--- a/Hibernate_WebServices/Home.html
+++ b/Hibernate_WebServices/Home.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="./cdss/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body >
    
     <span >hello desde home</span>
-    <span class="id-mostrar">user: </span>
+    <span class="id-mostrarHome"> </span>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -18,5 +18,6 @@
     <script src="./js/Servicios.js"></script>
 
 </body>
+
 
 </html>
